@@ -6,6 +6,7 @@ Changelog
 
  * Added another valid AudioBoom oEmbed pattern (Bertrand Bordage)
  * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
+ * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
 
 
 2.1 (22.05.2018)
